Fix mobile margins/spacing.

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ video {
   border: 0.325rem solid black;
   height: 57rem;
   width: 43rem;
-  margin: 5% auto 7% auto;
+  margin: 3% auto 5% auto;
   box-shadow: inset 0 0 0.1875rem 0.1875rem rgba(0, 0, 0, .3);
   box-shadow: 0 0.125rem 0.3125rem 0 rgba(0, 0, 0, 0.3), 0 0.1875rem 0.5rem 0 rgba(0, 0, 0, 0.5);
 }
@@ -694,6 +694,7 @@ video {
   background-color: white;
   padding: 2.8125rem;
   text-align: center;
+  margin-top: -3rem;
 }
 
 .credits-container h2 {
@@ -938,11 +939,11 @@ footer {
 
 @media (max-width: 440px) {
   html {
-    font-size: 8px;
+    font-size: 8.7px;
   }
 
   .pokedex-container {
-    margin-bottom: 9%;
+    margin-bottom: 7%;
   }
 
   .poke-shiny {
@@ -953,6 +954,10 @@ footer {
     height: 2.1rem;
     width: 2.1rem;
     bottom: .3rem;
+  }
+
+  footer {
+    margin-top: 5rem;
   }
 }
 
